# hh-slasher

./: .env-example  .gitignore  Makefile  Pipfile  README.md  pyproject.toml  scrapy.cfg  setup.cfg
cli/: google-sheets-importer.py
data/: hh-api-token-example.json  idatica-google-service-account-credentails-example.json
hh/: ext.py  itemloader.py  items.py  middlewares.py  settings.py
hh/monitors/: monitors.py
hh/spiders/: hh.py
hh/utils/: cached_vacancies.py  employer_request.py  item.py  vacancies_request.py  vacancy_request.py
notebooks/: analisys-skills.ipynb
