[project]
name = "hh"
version = "0.1.0"
description = "Scraping project from hh"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scrapy",
    "tenacity",
    "httpx",
    "pytz",
    "gspread",
    "pandas",
    "spidermon[monitoring]",
]

[dependency-groups]
dev = [
    "black",
    "isort",
    "mypy",
    "flake8",
    "bandit",
    "ipython",
    "pandas-stubs",
    "notebook>=7.3.2",
]

[tool.bandit]
exclude_dirs = [".venv", "tests"]

[tool.black]
line-length = 88
skip-string-normalization = true

[tool.isort]
atomic = true
profile = "black"

[[tool.mypy.overrides]]
module = "scrapy.*"
ignore_missing_imports = true
